# papillon

./: .gitignore  CMakeLists.txt  README.md  sourcelist.cmake
include/Papillon/geometry/: geo_navigator.hpp  geo_node.hpp  geometry.hpp  ray.hpp
include/Papillon/geometry/csg/: difference.hpp  half_space.hpp  intersection.hpp  union.hpp  volume.hpp
include/Papillon/geometry/surfaces/: plane.hpp  sphere.hpp  surface.hpp  xcylinder.hpp  xplane.hpp  ycylinder.hpp  yplane.hpp  zcylinder.hpp  zplane.hpp
include/Papillon/plotter/: camera.hpp  color.hpp  geo_plotter.hpp  plotter.hpp  plotter_3d.hpp
include/Papillon/utils/: _vector_base_.hpp  constants.hpp  direction.hpp  pmc_exception.hpp  transformation.hpp  vector.hpp
src/: constants.cpp  dejavu_sans_mono.cpp  difference.cpp  geo_node.cpp  geo_plotter.cpp  geometry.cpp  half_space.cpp  imgui_impl_opengl3.cpp  intersection.cpp  main.cpp  plane.cpp  plotter_3d.cpp  ray.cpp  sphere.cpp  transformation.cpp  union.cpp  xcylinder.cpp  xplane.cpp  ycylinder.cpp  yplane.cpp  zcylinder.cpp  zplane.cpp
tests/: CMakeLists.txt  cell_tests.cpp  difference_tests.cpp  direction_tests.cpp  geo_navigator_tests.cpp  half_space_tests.cpp  hex_lattice_tests.cpp  intersection_tests.cpp  plane_tests.cpp  ray_tests.cpp  rect_lattice_tests.cpp  sphere_tests.cpp  tests_main.cpp  transformation_tests.cpp  union_tests.cpp  universe_tests.cpp  vector_tests.cpp  xcylinder_tests.cpp  xplane_tests.cpp  ycylinder_tests.cpp  yplane_tests.cpp  zcylinder_tests.cpp  zplane_tests.cpp
